# book-data-science-projects-with-python

./: predicao-bons-pagadores.ipynb  pyproject.toml
.ipynb_checkpoints/: predicao-bons-pagadores-checkpoint.ipynb  pyproject-checkpoint.toml
